some more fixes

--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
     <div class=" absolute top-0 right-0 "> <img src="exit.png" alt="exit" class=" mix-blend-multiply" id="exit"></div>
     <h2 class="font-medium text-2xl mt-7">Advanced Search:</h2>
     <div class="flex flex-col gap-4 ">
-      <div class="flex items-center gap-3 mt-5">
-        <label class="text-lg">Latitude &nbsp;:&nbsp;&nbsp;</label>
+      <div class="flex items-center gap-2 mt-5">
+        <label class="text-base">Latitude &nbsp;&nbsp;</label>
         <input required type="text" name="latitude" id="lat"
-          class="border-2 border-gray-300 rounded-md p-1 px-3 focus:outline-none focus:border-blue-500">
+          class="border-2 border-gray-300 rounded-md p-1 px-3 focus:outline-none focus:border-blue-500 ">
       </div>
-      <div class="flex items-center gap-3 mt-5">
-        <label class="text-lg">Longitude :</label>
+      <div class="flex items-center gap-2 mt-5">
+        <label class="text-base">Longitude </label>
         <input required type="text" name="longitude" id="long"
-          class="border-2 border-gray-300 rounded-md p-1 px-3 focus:outline-none focus:border-blue-500">
+          class="border-2 border-gray-300 rounded-md p-1 px-3 focus:outline-none focus:border-blue-500 ">
       </div>
     </div>
     <div id="displaymessage" class="mt-10 font-medium text-sm">Enter Values</div>
